feat: optimize docker file & enhance business logs and disable sql debug logs (#5)
* feat: basic logs
* feat: optimize docker image with 220MB size from 447 MB
* feat: optimize docker image